--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -9,7 +9,7 @@ This was/is a project to create a functioning E-reader for my partner, which wou
 
 ![](../_images/image%20(4).jpg)
 
-I have tried to document the development process, source code and CAD/CAM. If you are interested these are split between the pages.
+I have tried to document the development process, source code and CAD/CAM. If you are interested these are split between these pages.
 
 [Requirement Analysis](requirement_analysis.md)
 [Mechanical Design and CAM](mechanical.md)
