trying with new link

--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -7,7 +7,7 @@ category: overview
 
 This was/is a project to create a functioning E-reader for my partner, which would also allow for an external trigger for page turning. The project has had two main iterations, sadly I didn't chronicle the first iteration very well and have few images of it intact, to add insult to injury the CAD program I used to design it was a student version so the files are now useless to me. This repo contains the redesign using FreeCAD in which a wooden case (instead of 3d printed PLA) is used, along with all the software for running it. 
 
-![](/dtourolle/images/image%20(4).jpg)
+![](./assets/images/image%20(4).jpg)
 
 I have tried to document the development process, source code and CAD/CAM. If you are interested these are split between these pages.
 
