first large dump

--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -1,21 +1,22 @@
 ---
 layout: post
 category: e-reader
+title: "D-reader project"
+
 ---
 
-# D-reader project
 
 This was/is a project to create a functioning E-reader for my partner, which would also allow for an external trigger for page turning. The project has had two main iterations, sadly I didn't chronicle the first iteration very well and have few images of it intact, to add insult to injury the CAD program I used to design it was a student version so the files are now useless to me. This repo contains the redesign using FreeCAD in which a wooden case (instead of 3d printed PLA) is used, along with all the software for running it. 
 
 ![](./assets/images/image%20(4).jpg)
 
-I have tried to document the development process, source code and CAD/CAM. If you are interested these are split between these pages.
+I have tried to document the development process, source code and CAD/CAM. If you are interested these are split between these pages. The software, CAD and CAM can be found here.
 
-[Requirement Analysis](requirement_analysis.md)
-[Mechanical Design and CAM](mechanical.md)
-[Electronics design](electronics.md)
-[Software design](software.md)
-[Lessons learnt](lessons.md)
+[Requirement Analysis](2022-08-31-requirement_analysis.md)
+[Mechanical Design and CAM](2022-08-31-mechanical.md)
+[Electronics design](2022-08-31-electronics.md)
+[Software design](2022-08-31-software.md)
+[Lessons learnt](2022-08-31-lessons.md)
 
 # Acknowledgements
 
