maore small adjustments

--- a/_posts/2022-08-31-software.md
+++ b/_posts/2022-08-31-software.md
@@ -1,4 +1,10 @@
-# Writing an E-reader application
+---
+layout: post
+category: e-reader
+title: "Writing an E-reader application"
+
+---
+
 
 Maybe some important information about my own background, I am an engineer who has spent years writing simulations, image analysis and signal analysis software in both C/C++ and Python. I actually adore Python for these kinds of projects as the community is so open and thriving. Yes I could probably find some C/C++ library for the display, or the manufacturer would have some snippets of example code which work if you have the same compiler and architecture. In a project like this there are many moving wheels and it's really important you can quickly determine which wheel is stuck. With Python I can make notebooks or scripts with each part and debug them in minutes. Sadly with C/C++ even with years of experience I tend to do this by either linking the code to Python or making minimum working python versions. Anyway enough about me.
 
