link and format fix

--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -12,18 +12,19 @@ This was/is a project to create a functioning E-reader for my partner, which wou
 
 I have tried to document the development process, source code and CAD/CAM. If you are interested these are split between these pages. The software, CAD and CAM can be found here.
 
-[Requirement Analysis](2022-08-31-requirement_analysis.md)
-[Mechanical Design and CAM](2022-08-31-mechanical.md)
-[Electronics design](2022-08-31-electronics.md)
-[Software design](2022-08-31-software.md)
-[Lessons learnt](2022-08-31-lessons.md)
+- [Requirement Analysis](https://dtourolle.github.io/requirement-analysis.html)
+- [Mechanical Design and CAM](https://dtourolle.github.io/mechanical.html)
+- [Electronics design](https://dtourolle.github.io/electronics.html)
+- [Software design](https://dtourolle.github.io/software.html)
+- [Lessons learnt](https://dtourolle.github.io/lessons.html)
+
 
 # Acknowledgements
 
 The project would have been impossible for me to complete without the OpenSource code created in the following projects:
 
-[IT8951 Display driver](https://github.com/GregDMeyer/IT8951)
-[Various bits of HTML parsing, inspiration for decoding EPUB](https://github.com/wustho/epr)
-[Micropython for the trigger device](https://micropython.org/)
-[Inspiration for powering the device one and off](https://github.com/NeonHorizon/lipopi)
-[ulab for fast maths on embedded devices](https://github.com/v923z/micropython-ulab)
+- [IT8951 Display driver](https://github.com/GregDMeyer/IT8951)
+- [Various bits of HTML parsing, inspiration for decoding EPUB](https://github.com/wustho/epr)
+- [Micropython for the trigger device](https://micropython.org/)
+- [Inspiration for powering the device one and off](https://github.com/NeonHorizon/lipopi)
+- [ulab for fast maths on embedded devices](https://github.com/v923z/micropython-ulab)
