--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -6,17 +6,19 @@ title: "D-reader project"
 ---
 
 
-This was/is a project to create a functioning E-reader for my partner, which would also allow for an external trigger for page turning. The project has had two main iterations, sadly I didn't chronicle the first iteration very well and have few images of it intact, to add insult to injury the CAD program I used to design it was a student version so the files are now useless to me. This repo contains the redesign using FreeCAD in which a wooden case (instead of 3d printed PLA) is used, along with all the software for running it. 
+This was/is a project to create a functioning E-reader for my partner, which would also allow for an external trigger for page turning. The project has had two main iterations, sadly I didn't chronicle the first iteration very well and have few images of it intact, to add insult to injury the CAD program I used to design it was a student version so the files are now useless to me. This repo contains the redesign using FreeCAD in which a wooden case (instead of 3d printed PLA) is used, along with all the software for running it. The GitHub repository containing all software, CAD and CAM data can be found [here](https://github.com/dtourolle/d-reader-public).
 
 ![](./assets/images/image%20(4).jpg)
 
 I have tried to document the development process, source code and CAD/CAM. If you are interested these are split between these pages. The software, CAD and CAM can be found here.
+
 
 - [Requirement Analysis](https://dtourolle.github.io/requirement-analysis.html)
 - [Mechanical Design and CAM](https://dtourolle.github.io/mechanical.html)
 - [Electronics design](https://dtourolle.github.io/electronics.html)
 - [Software design](https://dtourolle.github.io/software.html)
 - [Lessons learnt](https://dtourolle.github.io/lessons.html)
+
 
 
 # Acknowledgements
