using tags not tag_name

--- a/_posts/2022-08-31-software.md
+++ b/_posts/2022-08-31-software.md
@@ -3,7 +3,7 @@ layout: post
 category: e-reader
 title: "Writing an E-reader application"
 image: ./assets/images/UML_application.png
-tag-name: e-reader
+tags: e-reader
 ---
 
 
