--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -3,7 +3,7 @@ layout: post
 category: e-reader
 title: "D-reader project"
 image: ./assets/images/image%20(4).jpg
-tag-name: [e-reader, project_home]
+tags: [e-reader, project_home]
 ---
 
 
