--- a/_posts/2022-08-31-lessons.md
+++ b/_posts/2022-08-31-lessons.md
@@ -3,7 +3,7 @@ layout: post
 category: e-reader
 title: "D-reader Lessons from the original design"
 image: ./assets/images/Version_1_screen.jpg
-tag-name: e-reader
+tags: e-reader
 ---
 
 The original design used 3d printed PLA, it was actually one of the first projects I had used a 3d printer for and so I was learning about the capabilities of additive manufacturing while designing. What I realized for creating enclosures/cases is that flat surfaces need to be on the print bed. What I realized as well was that even with ironing the texture of an open surface always looks worse than that on the print bed. Therefore I designed the case to consist of two parts, a top and a bottom. This meant the front/top of the case would be very thin and the base/back would be thick and house everything. To protect the screen a TPU cover was printed to attach the cover and the case magnets were embedded in both, the cover had a bulky side lobe to put the magnets inline with the side of the device.
