enable latex like maths try to list posts bellow page

--- a/_posts/2022-08-31-software.md
+++ b/_posts/2022-08-31-software.md
@@ -44,7 +44,8 @@ The other massive advantage for me with micropython was that the BLE library is 
 
 The trigger application was quite simple. It checked the accelerometer at 10hz and computed the magnitude of the acceleration using [ulab](https://github.com/v923z/micropython-ulab). It was then calculating an [exponential moving average and variance](https://en.wikipedia.org/wiki/Moving_average#Exponentially_weighted_moving_variance_and_standard_deviation). The difference from the current measurement and the mean was then compared to the variance. 
 
-${\delta^2 \over Var} <Threshold $
+$$ \frac{ \delta^{2}}{Var} < Threshold$$
+
 
 If this criteria is met then a signal was is sent via BLE to the e-reader that a page turn is expected.
 
