try mp4 not gif

--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -11,7 +11,7 @@ This was/is a project to create a functioning E-reader for my partner, which wou
 
 ![](./assets/images/image%20(4).jpg)
 
-![](./assets/images/watch_in_action.gif)
+![](./assets/images/watch_in_action.mp4)
 
 I have tried to document the development process, source code and CAD/CAM. If you are interested these are split between these pages. The software, CAD and CAM can be found here.
 
