fixed some typos, maybe fixed equation

--- a/_posts/2022-08-31-lessons.md
+++ b/_posts/2022-08-31-lessons.md
@@ -6,7 +6,7 @@ image: ./assets/images/Version_1_screen.jpg
 tags: e-reader
 ---
 
-The original design used 3d printed PLA, it was actually one of the first projects I had used a 3d printer for and so I was learning about the capabilities of additive manufacturing while designing. What I realized for creating enclosures/cases is that flat surfaces need to be on the print bed. What I realized as well was that even with ironing the texture of an open surface always looks worse than that on the print bed. Therefore I designed the case to consist of two parts, a top and a bottom. This meant the front/top of the case would be very thin and the base/back would be thick and house everything. To protect the screen a TPU cover was printed to attach the cover and the case magnets were embedded in both, the cover had a bulky side lobe to put the magnets inline with the side of the device.
+The original design used 3d printed PLA, it was actually one of the first projects I had used a 3d printer for and so I was learning about the capabilities of additive manufacturing while designing. I learnt that for creating enclosures/cases flat surfaces need to be on the print bed. What I realized as well was that even with ironing the texture of an open surface always looks worse than that on the print bed. This lead me to design the case  as two parts, a top and a bottom, which enclosed the electronics. This meant the front/top of the case would be very thin and the base/back would be thick and house everything. To protect the screen a TPU cover was printed to attach the cover and the case magnets were embedded in both, the cover had a bulky side lobe to put the magnets inline with the side of the device.
 
 ![](./assets/images/Version_1_screen.jpg) ![](./assets/images/Version_1_covered.jpg)
 
