--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -7,11 +7,11 @@ tags: [e-reader, project_home]
 ---
 
 
-This was/is a project to create a functioning E-reader for my partner, which would also allow for an external trigger for page turning. The project has had two main iterations, sadly I didn't chronicle the first iteration very well and have few images of it intact, to add insult to injury the CAD program I used to design it was a student version so the files are now useless to me. This repo contains the redesign using FreeCAD in which a wooden case (instead of 3d printed PLA) is used, along with all the software for running it. The GitHub repository containing all software, CAD and CAM data can be found [here](https://github.com/dtourolle/d-reader-public).
+This is a project to create a functioning e-reader for my partner. They are a ferocious reader and the repetitive clicking on a kindle would often lead to some discomfort. So when the battery on their kindle started to fail I started this project was to build a e-reader which could connect to a wearable and be controlled via motion. The project has had two main iterations, the first iteration was in 2020 during the first COVID lock down, the second iteration was in spring 2022. The main differences between them are the enclosure design and construction, with 2020 version had a 3d printed PLA case, while the 2022 version has a machine pear wood enclosure. Sadly I didn't chronicle the first iteration very well, to add insult to injury the CAD program I used to design it was am educational version so the files are now unreadable for me. This repo contains the designs for the second iteration designed using FreeCAD, along with all the software for running it. The GitHub repository containing all software, CAD and CAM data can be found [here](https://github.com/dtourolle/d-reader-public).
 
 ![](./assets/images/image%20(4).jpg)
 
-<video width="480" height="320" controls="controls">
+<video width="1024" height="1024" controls="controls">
   <source src="https://dtourolle.github.io/assets/images//watch_in_action.mp4" type="video/mp4">
 </video>
 
