--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -7,7 +7,7 @@ tags: [e-reader, project_home]
 ---
 
 
-This is a project to create a functioning e-reader for my partner. They are a ferocious reader and the repetitive clicking on a kindle would often lead to some discomfort. So when the battery on their kindle started to fail I started this project was to build a e-reader which could connect to a wearable and be controlled via motion. The project has had two main iterations, the first iteration was in 2020 during the first COVID lock down, the second iteration was in spring 2022. The main differences between them are the enclosure design and construction, with 2020 version had a 3d printed PLA case, while the 2022 version has a machine pear wood enclosure. Sadly I didn't chronicle the first iteration very well, to add insult to injury the CAD program I used to design it was am educational version so the files are now unreadable for me. This repo contains the designs for the second iteration designed using FreeCAD, along with all the software for running it. The GitHub repository containing all software, CAD and CAM data can be found [here](https://github.com/dtourolle/d-reader-public).
+This is a project to create a functioning e-reader for my partner. They are a ferocious reader and hours of repetitive clicking on a kindle would often lead to some discomfort. So when the battery on their kindle started to fail I started this project, which is to build a e-reader which connects to a wearable and be controlled via motion. The project has had two main iterations, the first iteration was in 2020 during the first COVID lock down, the second iteration was in spring 2022. The main differences between them are the enclosure design and construction, with 2020 version had a 3d printed PLA case, while the 2022 version has a machine pear wood enclosure. Sadly I didn't chronicle the first iteration very well, to add insult to injury the CAD program I used to design it was am educational version so the files are now unreadable for me. This repo contains the designs for the second iteration designed using FreeCAD, along with all the software for running it. The GitHub repository containing all software, CAD and CAM data can be found [here](https://github.com/dtourolle/d-reader-public).
 
 ![](./assets/images/image%20(4).jpg)
 
