--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -11,7 +11,7 @@ This is a project to create a functioning e-reader for my partner. They are a fe
 
 ![](./assets/images/image%20(4).jpg)
 
-<video width="1024" height="1024" controls="controls">
+<video width="80%" controls="controls">
   <source src="https://dtourolle.github.io/assets/images//watch_in_action.mp4" type="video/mp4">
 </video>
 
