--- a/_posts/2022-08-31-lessons.md
+++ b/_posts/2022-08-31-lessons.md
@@ -6,26 +6,27 @@ image: ./assets/images/Version_1_screen.jpg
 tags: e-reader
 ---
 
-The original design used 3d printed PLA, it was actually one of the first projects I had used a 3d printer for and so I was learning about the capabilities of additive manufacturing while designing. I learnt that for creating enclosures/cases flat surfaces need to be on the print bed. What I realized as well was that even with ironing the texture of an open surface always looks worse than that on the print bed. This lead me to design the case  as two parts, a top and a bottom, which enclosed the electronics. This meant the front/top of the case would be very thin and the base/back would be thick and house everything. To protect the screen a TPU cover was printed to attach the cover and the case magnets were embedded in both, the cover had a bulky side lobe to put the magnets inline with the side of the device.
+The original design used 3d printed PLA, it was one of the first projects I had used a 3d printer for and so I was learning about the capabilities of additive manufacturing while designing. I learnt that for creating enclosures/cases flat surfaces need to be on the print bed. What I realized as well was that even with ironing the texture of an open surface always looks worse than that on the print bed. This led me to design the case as two parts, a top and a bottom, which enclosed the electronics. This meant the front/top of the case would be very thin and the base/back would be thick and house everything. To protect the screen a TPU cover was printed to attach the cover and the case magnets were embedded in both, the cover had a bulky side lobe to put the magnets in line with the side of the device.
 
 ![](./assets/images/Version_1_screen.jpg) ![](./assets/images/Version_1_covered.jpg)
 
-There was one large flaw in this design which was always in the back of my mind but I had also just ignored, that is that the screen was one of the elements helping to contain the electrical guts. Yes these really are like guts, here is an image of it being disabled after the screen broke.
+There was one large flaw in this design, which was always in the back of my mind, but I had also just ignored, that is that the screen was one of the elements helping to contain the electrical guts. Yes, these really are like guts, here is an image of it being disabled after the screen broke.
 ![](./assets/images/Old_with_electronics.jpg)
-The other side to this flaw was that the screen was unsupported in places, specifically over the battery, this meant that if pressure was applied here it could potentially flex the screen and break it. This would also be true if it was supported but the failure would need significantly more force. Sadly the cover eventually allowed a large force in the wrong area and this broke the display.
-The other flaw in the design was the assembly method, this was partly because of my inexperience with 3d printing, but the case was welded shut using a soldering iron, this made removing the front remarkably destructive. An actually a big thank you to Siemens for making the project necessary if I had still had a working version NX I might have just tweaked the design and re-printed, but since my license had expired it gave me a chance to learn how to use FreeCAD.
+The other side to this flaw was that the screen was unsupported in places, specifically over the battery, this meant that if pressure was applied here, it could potentially flex the screen and break it. This would also be true if it was supported but the failure would need significantly more force. Sadly, the cover eventually allowed a large force in the wrong area, and this broke the display.
+The other flaw in the design was the assembly method, this was partly because of my inexperience with 3d printing, but the case was welded shut using a soldering iron, this made removing the front remarkably destructive. An a big thank you to Siemens for making the project necessary if I had still had a working version NX I might have just tweaked the design and re-printed, but since my license had expired it gave me a chance to learn how to use FreeCAD.
 
 The most important lessons from this were
 - The screen needs a back panel to reduce local bending from point loads
-- The bulky side lobe of the original cover were an issue as they allowed the cover to get pulled off if they caught on something (handbags can have lots of things in them)
+- The bulky side lobe of the original cover was an issue as they allowed the cover to get pulled off if they caught on something (handbags can have lots of things in them)
 - TPU is not a rigid enough material for the cover
 
 ## Lessons from new design
 
-The new design has been in use for ~1 year. In this time there have been only two issues. The first one was that the old charging circuit broke in the first months after the rebuilt. At first I was worried it was the battery itself but through "key-hole surgery" I could see that the LED for charging was on but the battery was not being charged. This itself was not the issue, such a hobby project and having been used in an already different project meant the contacts for soldering to the PCB were already worn away a bit. The issue was replacing the broken part through the glued wood back.
+The new design has been in use for ~1 year. In this time there have been only two issues. The first one was that the old charging circuit broke in the first months after the rebuilt. At first, I was worried it was the battery itself but through "key-hole surgery" I could see that the LED for charging was on, but the battery was not being charged. This itself was not the issue, such a hobby project and having been used in an already different project meant the contacts for soldering to the PCB were already worn away a bit. The issue was replacing the broken part through the glued wood back.
 I tackled this by cutting a rectangle out of the back cover which would allow me to de-solder the connections to the board and drop in a replacement. I also separated the boost and charger to add USB-C and use an existing separate boost unit.
-I could then cut a fitting rectangle from stock and with some cantilever spars and wood filler repair the cut. If I would make a new design I would make a unscrew-able enclosure.
+I could then cut a fitting rectangle from stock and with some cantilever spars and wood filler repair the cut. If I would make a new design, I would make a unscrew-able enclosure.
 
 The second lesson was from my partner using the device more, well more bugs and quirks were found. One issue was the start-up time was ~70 seconds. Investing some time with CProfile allowed be to claw back 40 seconds, being lost through blocking behaviour of bluepy. The functionality was changed so the e-reader doesn't automatically connect to the Watch, but only on a specific button press.
 
-If I were to re-write the software I would shift from threads to asyncio. This would allow greater control of the orchestration of the subprocesses.
+If I were to re-write the software, I would shift from threads to asyncio. This would allow greater control of the orchestration of the subprocesses.
+
