--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -7,16 +7,16 @@ tags: [e-reader, project_home]
 ---
 
 
-This is a project to create a functioning e-reader for my partner. They are a ferocious reader and hours of repetitive clicking on a kindle  often leaves them with some discomfort. So when the battery on their kindle began to fail I started this project, which is to build a e-reader which connects to a wearable wallowing it to be controlled via motion. The project has had two iterations, the first iteration was in 2020 during the first COVID lock down, the second iteration was in spring 2022. The main differences between them are the enclosure design and construction, with 2020 version had a 3d printed PLA case, while the 2022 version has a machine pear wood enclosure. Sadly I didn't chronicle the first iteration, to add insult to injury the CAD program I used to design it was an educational version so the files are now unreadable. This repo contains the designs for the second iteration (designed using FreeCAD), along with all the software for running it. The GitHub repository containing all software, CAD and CAM data can be found [here](https://github.com/dtourolle/d-reader-public).
+This is a project to create a functioning e-reader for my partner. They are a ferocious reader and hours of repetitive clicking on a kindle often leaves them with some discomfort. So, when the battery on their kindle began to fail, I started this project, which is to build a e-reader which connects to a wearable allowing it to be controlled via motion. The project has had two iterations, the first iteration was completed in spring 2020 during the first COVID lock down, the second iteration was in spring 2022. The main differences between them are the enclosure design and construction, with 2020 version had a 3d printed PLA case, while the 2022 version has a machine pear wood enclosure. Sadly, I didn't chronicle the first iteration, to add insult to injury the CAD program I used to design it was an educational version, so the files are now unreadable. This repo contains the designs for the second iteration (designed using FreeCAD), along with all the software for running it. The GitHub repository containing all software, CAD and CAM data can be found [here](https://github.com/dtourolle/d-reader-public).
 
 ![](./assets/images/image%20(4).jpg)
 
-<video width="80%" controls="controls">
+<video width="100%" controls="controls">
   <source src="https://dtourolle.github.io/assets/images//watch_in_action.mp4" type="video/mp4">
 </video>
 
 
-I have tried to document the development process, source code and CAD/CAM, in some cases this is really retrospectively. If you are interested these are split between these pages. The software, CAD and CAM can be found here.
+I have tried to document the development process, source code and CAD/CAM, in some cases this is really retrospective. If you are interested these are split between these pages. If you are not interested in the story then the software, CAD and CAM can be found [here](https://github.com/dtourolle/d-reader-public).
 
 
 - [Requirement Analysis](https://dtourolle.github.io/requirement-analysis.html)
