--- a/_posts/2022-09-1-e-reader.md
+++ b/_posts/2022-09-1-e-reader.md
@@ -7,7 +7,7 @@ tags: [e-reader, project_home]
 ---
 
 
-This is a project to create a functioning e-reader for my partner. They are a ferocious reader and hours of repetitive clicking on a kindle often leaves them with some discomfort. So, when the battery on their kindle began to fail, I started this project, which is to build a e-reader which connects to a wearable allowing it to be controlled via motion. The project has had two iterations, the first iteration was completed in spring 2020 during the first COVID lock down, the second iteration was in spring 2022. The main differences between them are the enclosure design and construction, with 2020 version had a 3d printed PLA case, while the 2022 version has a machine pear wood enclosure. Sadly, I didn't chronicle the first iteration, to add insult to injury the CAD program I used to design it was an educational version, so the files are now unreadable. This repo contains the designs for the second iteration (designed using FreeCAD), along with all the software for running it. The GitHub repository containing all software, CAD and CAM data can be found [here](https://github.com/dtourolle/d-reader-public).
+I built an e-reader for my partner who is an avid reader and was experiencing discomfort from hours of repetitive clicking on a kindle. The e-reader connects to a wearable and can be controlled via motion. The project has had two iterations, with the main differences being the enclosure design and construction. The first iteration was completed in spring 2020 during the first COVID lock down, while the second iteration was in spring 2022. [This repo](https://github.com/dtourolle/d-reader-public). contains the designs for the second iteration (designed using FreeCAD), along with all the software for running it. 
 
 ![](./assets/images/image%20(4).jpg)
 
